// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`smooch-whatsapp-disconnect-checker Everything is successful delay disconnect using checkIfClientPastInactiveTimeout() 1`] = `
Array [
  Array [
    Object {
      "delayMinutes": 15,
      "logContext": Object {
        "hasInteractionItem": true,
        "interactionId": "667802d8-2260-436c-958a-2ee0f71f73f0",
        "interactionIdToCheck": "667802d8-2260-436c-958a-2ee0f71f73f0",
        "smoochUserId": "667802d8-2260-436c-958a-2ee0f71f73f2",
        "source": "whatsapp",
        "tenantId": "250faddb-9723-403a-9bd5-3ca710cb26e5",
      },
      "userId": "667802d8-2260-436c-958a-2ee0f71f73f2",
    },
  ],
]
`;

exports[`smooch-whatsapp-disconnect-checker Everything is successful disconnect after customer past timeout 1`] = `
Array [
  Array [
    Object {
      "cxAuth": Object {
        "password": "Password",
        "username": "UserName",
      },
      "logContext": Object {
        "hasInteractionItem": true,
        "interactionId": "667802d8-2260-436c-958a-2ee0f71f73f0",
        "interactionIdToCheck": "667802d8-2260-436c-958a-2ee0f71f73f0",
        "smoochUserId": "667802d8-2260-436c-958a-2ee0f71f73f2",
        "source": "whatsapp",
        "tenantId": "250faddb-9723-403a-9bd5-3ca710cb26e5",
      },
    },
  ],
]
`;

exports[`smooch-whatsapp-disconnect-checker Everything is successful disconnect with 1 minute left 1`] = `
Array [
  Array [
    Object {
      "cxAuth": Object {
        "password": "Password",
        "username": "UserName",
      },
      "logContext": Object {
        "hasInteractionItem": true,
        "interactionId": "667802d8-2260-436c-958a-2ee0f71f73f0",
        "interactionIdToCheck": "667802d8-2260-436c-958a-2ee0f71f73f0",
        "smoochUserId": "667802d8-2260-436c-958a-2ee0f71f73f2",
        "source": "whatsapp",
        "tenantId": "250faddb-9723-403a-9bd5-3ca710cb26e5",
      },
    },
  ],
]
`;

exports[`smooch-whatsapp-disconnect-checker Walkthrough passes in the correct arguments to secretClient.getSecretValue() to get cx credentials 1`] = `
Array [
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-cx",
    },
  ],
]
`;

exports[`smooch-whatsapp-disconnect-checker throws an error when No customer timestamp is found 1`] = `"Customer Message Timestamp does not exists"`;

exports[`smooch-whatsapp-disconnect-checker throws an error when there is a problem geting smooch interaction record 1`] = `"Falied to get smooch interaction record"`;

exports[`smooch-whatsapp-disconnect-checker throws an error when there is a problem retrieving cx credentials 1`] = `"Error retrieving cx credentials"`;
